# hFlux

./: .gitmodules  CMakeLists.txt  LICENSE.md  Manifest.toml  Project.toml  README.md  hFlux.py  spack.yaml
.github/workflows/: documentation.yml  main.yml
cmake/: hflux-config.cmake.in
docs/: make.jl  quickstart.md
docs/src/: index.md  quickstart.md
include/hFlux/: FieldInterpolation.hpp  FiniteDifferenceWeights.hpp  c_wrapper.h  common.hpp
src/: CMakeLists.txt  FieldInterpolation.hpp  FiniteDifferenceWeights.hpp  c_wrapper.cpp  c_wrapper.h  hFlux.cpp  hFlux.jl  hFlux.py
test/: AnalyticField.hpp  CMakeLists.txt  common.hpp  hermite_test.c  hermite_test.cpp  runtests.jl
test/cmake/: Utils.cmake
